# URL-categorization-using-machine-learning

./: .gitignore  01_construct_features.py  02_construct_models.py  03_train_models.py  LICENSE  URL-categorization-Jupyter-Notebook.ipynb  URL-categorization_10000.csv  URL-categorization_2000.csv  config.py  construct_data.sh  construct_features.py  construct_models.py  filtered_data_1000  functions.py  github_ci.yml  main.py  output.txt  predict_url.py  pyproject.toml  readme.md  requirements.txt  results_1000  results_10000  results_2000  test  total_results  train_models.py  url_100  url_1000  url_10_lines  url_test  urls_to_predict.txt  useful_links
.ipynb_checkpoints/: FullDataset-checkpoint.ipynb  URL-categorization-Jupyter-Notebook-checkpoint.ipynb  dataset_creation-checkpoint.ipynb  predictions_test-checkpoint.ipynb
Datasets/: Feature_dataset_2019-05-05.csv  Translated_tokens_2019-05-05.csv  URL-categorization-DFE.csv  stopwords_extended.txt
Diagrams/: dataset_creation.dia
Documentation/: VUMIFKK.sty  abstractEN.tex  allPacks.tex  bibtex_references_project.bib  conclusions.tex  document.aux  document.bbl  document.blg  document.out  document.tex  introduction.tex  literatureSources.bib  macros.tex  mainDocument.tex
Frequency_models/: word_frequency_2019-05-05.picle
Jupyter-notebook/: FullDataset.ipynb  Models_evaluations.ipynb  Predictions.ipynb  URL-categorization-Jupyter-Notebook.ipynb  Untitled.ipynb  analysis.ipynb  dataset_creation.ipynb  predictions_test.ipynb
Models/: Models_LR_2019-05-05.joblib
Report/: bibtex_references_project.bib  document.aux  document.bbl  document.blg  (+1 more)
(+46 files in other folders)
